[tool.poetry]
name = "pw-zai-project-1"
version = "0.1.0"
description = "Univiersity project"
authors = ["Szymon Kwiecinski"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
passlib = "^1.7.4"
flask-wtf = "^1.2.1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
email-validator = "^2.0.0.post2"
gunicorn = "^21.2.0"
flask-security = "^3.0.0"
sqlalchemy = "^2.0.22"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
icecream = "^2.1.3"
flask-reuploaded = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
